task #103 Filtrar, ordenar i buscar issues
