# api/api.yaml
@@ -147,11 +147,129 @@ paths:
                   type: string
                 avatar:
                   type: file
+  "/projects/":
+    get:
+      summary: Obté tots els projectes
+      tags:
+      - Projects
+      responses:
+        '200':
+          description: Operació exitosa
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+        '404':
+          description: Usuari no existent
+  "/projects/{project_id}/issues/":
+    get:
+      summary: Obté totes les Issues d'un Projecte
+      tags:
+      - Issues
+      parameters:
+      - name: project_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      - name: search
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: status
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - open
+          - in_progress
+          - testing
+          - reopened
+          - resolved
+      - name: issue_type
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - bug
+          - question
+          - enhancement
+      - name: severity
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - wishlist
+          - minor
+          - norm
+          - important
+          - critical
+      - name: priority
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - low
+          - normal
+          - high
+      - name: sort_by
+        in: query
+        required: false
+        schema:
+          type: string
+          enum:
+          - issue_type
+          - status
+          - severity
+          - priority
+          - subject
+      responses:
+        '200':
+          description: Operació exitosa
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  subject:
+                    type: string
+                  status:
+                    type: string
+                  creation_date:
+                    type: string
+                  issue_type:
+                    type: string
+                  severity:
+                    type: string
+                  priority:
+                    type: string
+                  blocked:
+                    type: boolean
+                  assigned_profile_id:
+                    type: integer
+                  assigned_profile_username:
+                    type: string
+        '404':
+          description: Usuari no existent
   "/projects/{project_id}/issues/{issue_id}/":
     get:
       summary: Obté la informació d'una Issue
       tags:
       - Issues
+      security:
+      - ApiKeyAuth: []
       parameters:
       - name: project_id
         in: path
@@ -181,7 +299,9 @@ paths:
                     type: string
                   created_by_user_id:
                     type: integer
-                  created_at:
+                  created_by_user_username:
+                    type: string
+                  creation_date:
                     type: string
                   issue_type:
                     type: string
@@ -193,9 +313,31 @@ paths:
                     type: string
                   blocked:
                     type: boolean
-                  assigned_profile:
+                  assigned_profile_id:
                     type: integer
-                  timeline_events:
+                  assigned_profile_username:
+                    type: string
+                  watchers:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        profile_id:
+                          type: integer
+                        profile:
+                          type: string
+                  attachments:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
+                        path:
+                          type: string
+                  activities:
                     type: array
                     items:
                       type: object
@@ -208,7 +350,7 @@ paths:
                           type: string
                         date:
                           type: string
-                  watched_issues:
+                  comments:
                     type: array
                     items:
                       type: object
@@ -217,7 +359,17 @@ paths:
                           type: integer
                         profile:
                           type: string
+                        text:
+                          type: string
+                        date:
+                          type: string
         '404':
           description: Projecte o Issue no existent
 servers:
 - url: http://127.0.0.1:3000
+components:
+  securitySchemes:
+    ApiKeyAuth:
+      type: apiKey
+      name: API_KEY
+      in: header
